# AltaBRDF

./: CMakeLists.txt  README.md  SConstruct  brdf.cpp  sphere.xml
scenes/: sphere+envmap.xml  sphere.xml
